Feat: Add common health check api
- Add common health check api
